dotnet_macros/tests/ui/dotnet_export_result_requires_policy.stderr
error: #[dotnet_export]: `Result<T, E>` cannot cross the managed seam; use `error = "exception"` for Display-only errors or `error = "managed"` for ManagedError diagnostics
 --> tests/ui/dotnet_export_result_requires_policy.rs:4:22
  |
4 | pub fn fallible() -> Result<i32, &'static str> {
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^
